--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#ignore objects and archives, anywhere in the tree.
+*.swp
+
 # Prerequisites
 *.d
 
@@ -30,3 +33,6 @@
 *.exe
 *.out
 *.app
+
+# Qt 
+*.pro.user
